# advent-of-code

./: README.md  pyproject.toml
2022/: 01_calories_counting.py  02_rock_paper_scissor.py  03_rucksack_reorganization.py  04_camp_cleanup.py  05_supply_stacks.py  06_tuning_trouble.py  requirements.txt
2022/day-01/: calories_counting.py  day_1.py
2022/day-02/: rock_paper_scissor.py
2022/day-03/: rucksack_reorganization.py
advent_of_code/: settings.py  utilities.py
advent_of_code/2022/: 02_rock_paper_scissor.py  04_camp_cleanup.py  06_tuning_trouble.py  07_no_space_left_on_device.py
advent_of_code/2023/: 01_trebuchet.py
advent_of_code/features/twenty_three/: if_you_give_a_seed_a_fertilizer.feature  trebuchet.feature
advent_of_code/tests/: test_2023_01_trebuchet.py
advent_of_code/tests/twenty_three/: test_cube_conundrum.py  test_gear_ratios.py  test_if_you_give_a_seed_a_fertilizer.py  test_scratchcards.py  test_trebuchet.py
advent_of_code/twenty_three/: cube_conundrum.py  gear_ratios.py  if_you_give_a_seed_a_fertilizer.py  scratchcards.py  trebuchet.py
advent_of_code/twenty_two/: 01_calories_counting.py  05_supply_stacks.py
